🐛 fix: update heading levels and adjust font sizes for better semantic structure and readability

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,13 +33,13 @@ h2 {
 }
 
 h3 {
-    font-size: clamp(1.75rem, calc(1.3rem + 0.6vw), 2.2rem);
+    font-size: clamp(1.85rem, calc(1.32rem + 0.7vw), 2.2rem);
     font-weight: 400;
     line-height: 1.2;
 }
 
 h4 {
-    font-size: clamp(1.5rem, calc(1.275rem + 0.3vw), 1.5rem);
+    font-size: clamp(1.75rem, calc(1.3rem + 0.6vw), 2.2rem);
     font-weight: 500;
     line-height: 1.2;
 }
